fixed: later page primary headings would overlap the content above (negative top margin)

--- a/template/style.css
+++ b/template/style.css
@@ -86,13 +86,14 @@ article {
 		text-shadow: 1px 1px 2px #000;
 		background: linear-gradient(182deg, #b8db74, #b2c967 8px, #7ca535, #000000 140px);
 		padding: 10px;
-		margin: -20px -20px 0;
+		margin: 0 -20px 0;
 		border-top: 2px solid #fff4;
 		border-left: 1px solid #2224;
 		border-right: 1px solid #2224;
 		border-bottom: 2px solid #2224;
 	}
 		article > h1:first-child {
+			margin-top: -20px;
 			border-radius: 3px 3px 0 0;
 		}
 	article hr {
